[project]
name = "domru_intercom_api"
version = "0.0.2"
description = "API wrapper for managing the dom.ru intercom."
authors = [
    { name = "regenara", email = "jakebv.22@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "certifi>=2022.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiohttp>=3.0.0,<4.0.0"
]
dynamic = ["readme"]

[project.urls]
repository = "https://github.com/regenara/domru_intercom_api"
homepage = "https://github.com/regenara/domru_intercom_api"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

